<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seccion_Reportar"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:background="@color/blau_marino"
            android:theme="@style/Widget.AppCompat.Toolbar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:titleTextColor="@color/white">

            <!-- Icon ImageView -->
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_white"
                android:layout_gravity="center_vertical" />

            <!-- Centered title TextView -->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="center_vertical"
                android:text="  InformaVies CAT"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="26sp"/>
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:padding="10dp">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="275dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reporta amb el següent formulari les dades rellevants de la incidència observada. Un tècnic de carretera gestionarà les accions pertinents per a la seva resolució."
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Latitud i longitud geolocalitzades: 123"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/coordenadas"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp">

                <!-- Carretera -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Carretera">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:minLines="1"
                        android:id="@+id/carreteraTextView"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Km -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginLeft="10dp"
                    android:hint="Km"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/kmTextView"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripció"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:maxLines="4"
                    android:id="@+id/descriptionTextView"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:id="@+id/urgenteRadioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Urgent"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/urgentRadioButton"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No urgent"
                    android:id="@+id/noUrgentRadioButton"/>

            </RadioGroup>

            <!--Checkbox-->
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Em faig càrrec de la veracitat de la incidència reportada i confirmo la seva exactitud."
                android:layout_centerVertical="true"
                android:alpha="0.7"
                android:id="@+id/confirmacio"
                android:layout_marginBottom="10dp"/>


            <!-- Report Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reportar incidència"
                android:id="@+id/reportar_incidencia_button"/>

        </LinearLayout>

    </LinearLayout>



    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/blau_marino"
        app:itemTextColor="@color/black">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
