...
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_reportar"
            android:icon="@drawable/baseline_add_alert_24"
            android:title="@string/reportar_nova_incid_ncia"/>

        <item
            android:id="@+id/nav_per_validar"
            android:icon="@drawable/nav_per_validar"
...
